--- a/src/Web/ClientApp/src/index.css
+++ b/src/Web/ClientApp/src/index.css
@@ -1,68 +1,721 @@
+@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
+@import "../node_modules/bootstrap-icons/font/bootstrap-icons.min.css";
+@import url("../node_modules/animate.css/animate.min.css");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&family=Marcellus&display=swap");
+
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+    --heading-font: "Marcellus", Roboto, sans-serif;
+    --heading-font-weight: 400;
+    --heading-color: #111;
+    --heading-line-height: 1.24;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+    --swiper-theme-color: #8C907E;
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+    --bs-body-font-family: "Jost", Roboto, sans-serif;
+    --bs-body-font-size: 18px;
+    --bs-body-font-weight: 400;
+    --bs-body-line-height: 1.5;
+    --bs-body-color: #8f8f8f;
+    --bs-body-color-rgb: 143, 143, 143;
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+    --bs-primary: #8C907E;
+    --bs-secondary: #6c757d;
+    --bs-black: #111;
+    --bs-light: #F1F1F0;
+    --bs-dark: #212529;
+    --bs-gray: #9aa1a7;
+    --bs-gray-dark: #51565b;
+
+    --bs-primary-rgb: 140, 144, 126;
+    --bs-secondary-rgb: 108, 117, 125;
+    --bs-black-rgb: 17, 17, 17;
+    --bs-light-rgb: 241, 241, 240;
+    --bs-dark-rgb: 33, 37, 41;
+
+    --bs-link-color: #111;
+    --bs-link-color-rgb: 17, 17, 17;
+    --bs-link-decoration: underline;
+    --bs-link-hover-color: #111;
+    --bs-link-hover-color-rgb: 17, 17, 17;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+    letter-spacing: 0.03rem
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+a {
+    text-decoration: none;
+    color: rgb(17, 17, 17);
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+    font-family: var(--heading-font);
+    font-weight: var(--heading-font-weight);
+    color: var(--heading-color);
+    line-height: var(--heading-line-height);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+.search-popup {
+    background-color: #fff;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 9999;
+    -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+    -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+    transition: opacity 0.3s 0s, visibility 0s 0.3s;
+}
+
+.search-popup.is-visible {
+    opacity: 1;
+    visibility: visible;
+    cursor: -webkit-image-set(url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath fill='%23FFF' d='M20 1l-1-1-9 9-9-9-1 1 9 9-9 9 1 1 9-9 9 9 1-1-9-9'/%3E%3C/svg%3E") 1x, url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath fill='%23000' d='M20 1l-1-1-9 9-9-9-1 1 9 9-9 9 1 1 9-9 9 9 1-1-9-9'/%3E%3C/svg%3E") 2x), pointer;
+    cursor: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath fill='%23000' d='M20 1l-1-1-9 9-9-9-1 1 9 9-9 9 1 1 9-9 9 9 1-1-9-9'/%3E%3C/svg%3E"), pointer;
+    -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+    -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+    transition: opacity 0.3s 0s, visibility 0s 0s;
+}
+
+.search-popup-container {
+    background-color: transparent;
+    position: relative;
+    top: 50%;
+    margin: 0 auto;
+    padding: 0;
+    width: 90%;
+    max-width: 800px;
+    text-align: center;
+    box-shadow: none;
+    cursor: default;
+    -webkit-transform: translateY(-40px);
+    transform: translateY(-40px);
+    -webkit-backface-visibility: hidden;
+    -webkit-transition-property: -webkit-transform;
+    transition-property: transform;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+
+.is-visible .search-popup-container {
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.search-popup-form {
+    position: relative;
+    margin: 0 0 3em 0;
+}
+
+.search-popup-form .form-control {
+    padding: 0 0 .375em 0;
+    font-size: 2em;
+}
+
+.search-popup-form #search-popup-submit {
+    display: none;
+}
+
+.search-popup .search-popup-close {
+    display: block;
+    position: absolute;
+    top: 2em;
+    right: 2em;
+    margin: -0.5em;
+    padding: 0.5em;
+    line-height: 0;
+}
+
+.search-popup .search-popup-close:hover {
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+}
+
+.search-popup .search-popup-close i {
+    display: block;
+    position: relative;
+    width: 1em;
+    height: 1em;
+    fill: rgba(0, 0, 0, 0.5);
+}
+
+.search-popup .search-popup-close:hover i {
+    fill: rgba(0, 0, 0, 1);
+}
+
+.search-popup .cat-list-title {
+    margin-top: 40px;
+    margin-bottom: 10px;
+    font-size: 0.6em;
+    font-weight: normal;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+}
+
+.search-popup .cat-list {
+    margin: 0;
+    list-style-type: none;
+}
+
+.search-popup .cat-list-item {
+    display: inline-block;
+    margin-bottom: 0;
+    letter-spacing: 0.015em;
+    font-size: 2em;
+}
+
+.search-popup .cat-list-item a {
+    position: relative;
+}
+
+.search-popup .cat-list-item a::after {
+    background: none repeat scroll 0 0 #fff;
+    content: "";
+    height: 1px;
+    border-bottom: 1px solid #ff9697;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 100%;
+    width: 100%;
+    -webkit-transition: height 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+    transition: height 0.3s, opacity 0.3s, transform 0.3s;
+    -webkit-transform: translateY(-5px);
+    transform: translateY(-5px);
+}
+
+.search-popup .cat-list-item a:hover::after {
+    height: 1px;
+    opacity: 1;
+    -webkit-transform: translateY(2px);
+    transform: translateY(2px);
+}
+
+.search-popup .cat-list-item::after {
+    content: "/";
+    padding: 0 5px;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.5);
+    vertical-align: text-top;
+}
+
+.search-popup .cat-list-item:last-child::after {
+    display: none;
+}
+
+@media only screen and (max-width: 991px) {
+
+    .search-popup .cat-list-item,
+    .search-popup-form .form-control {
+        font-size: 1.425em;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .search-popup .search-popup-close {
+        top: 1em;
+        right: 1em;
+    }
+}
+
+@media only screen and (max-width: 575px) {
+
+    .search-popup .cat-list-item,
+    .search-popup-form .form-control {
+        font-size: 1.125em;
+    }
+
+    .search-popup .search-popup-close {
+        top: 1em;
+        right: 1em;
+    }
+}
+
+.search-popup input[type="search"] {
+    font-size: 24px;
+    height: 60px;
+    padding: 26px;
+}
+
+.search-popup .search-form button {
+    top: 12px;
+    right: 15px;
+}
+
+.search-popup .search-form button svg {
+    height: 28px;
+    width: 28px;
+}
+
+.bg-light {
+    background-color: rgb(241, 241, 240, 1) !important;
+}
+
+.btn {
+    --bs-btn-border-radius: 0.5rem;
+}
+
+.btn-primary {
+    --bs-btn-color: #fff;
+    --bs-btn-bg: #8C907E;
+    --bs-btn-border-color: #8C907E;
+    --bs-btn-hover-color: #fff;
+    --bs-btn-hover-bg: #5e624e;
+    --bs-btn-hover-border-color: #5e624e;
+    --bs-btn-focus-shadow-rgb: 49, 132, 253;
+    --bs-btn-active-color: #fff;
+    --bs-btn-active-bg: #5e624e;
+    --bs-btn-active-border-color: #5e624e;
+    --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+    --bs-btn-disabled-color: #fff;
+    --bs-btn-disabled-bg: #8C907E;
+    --bs-btn-disabled-border-color: #8C907E;
+}
+
+.pagination {
+    --bs-pagination-active-bg: var(--bs-black);
+    --bs-pagination-border-width: 0;
+    --bs-pagination-border-radius: 0;
+}
+
+.btn-link {
+    font-size: 0.875rem;
+    font-family: var(--bs-body-font-family);
+    letter-spacing: 0.0875rem;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.btn-link:hover {
+    color: var(--bs-dark);
+}
+
+a.btn-link,
+a.btn-link:after {
+    transition: all .5s;
+}
+
+a.btn-link {
+    position: relative;
+}
+
+a.btn-link:before,
+a.btn-link:after {
+    content: '';
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    background-color: var(--bs-dark);
+    height: 1px;
+}
+
+[data-bs-theme=dark] a.btn-link:after {
+    background-color: var(--bs-white);
+}
+
+a.btn-link:before {
+    background-color: var(--bs-gray);
+    width: 100%;
+}
+
+a.btn-link.is-checked:after,
+a.btn-link:hover:after {
+    width: 100%;
+}
+
+a.btn-link.text-white:after {
+    background-color: var(--bs-white);
+}
+
+a.btn-link.text-light:after {
+    background-color: var(--bs-light);
+}
+
+.dropdown-menu {
+    border-radius: 0.5rem;
+    padding: 0.75rem;
+    color: #333d4c;
+    box-shadow: 0 0.5rem 2rem hsla(216, 9%, 44%, .1);
+    border: 1px solid #eef1f6;
+    background-color: #fff;
+}
+
+@media (min-width: 576px) {
+    .dropdown-menu {
+        display: block;
+        opacity: 0;
+        transition: all 0.4s;
+    }
+
+    .dropdown:hover .dropdown-menu {
+        display: block;
+        margin-top: 0;
+        opacity: 1;
+    }
+}
+
+.slideshow {
+    overflow: hidden;
+}
+
+.slideshow .swiper-slide {
+    background-position: center;
+    background-origin: padding-box;
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition: background-size 1s ease-in-out;
+}
+
+.slideshow.fade-in .swiper-slide .banner-content {
+    opacity: 0;
+    transition: opacity 0.3s ease-out;
+    transition-delay: 600ms;
+}
+
+.slideshow.fade-in .swiper-slide.swiper-slide-active .banner-content {
+    opacity: 1;
+}
+
+.slide-in .swiper-slide .banner-content h2,
+.slide-in .swiper-slide .banner-content p,
+.slide-in .swiper-slide .banner-content .btn {
+    display: inline-block;
+    opacity: 0;
+    transform: translate3d(0, 50px, 0);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.slide-in .swiper-slide .banner-content h2 {
+    transition-delay: 600ms;
+}
+
+.slide-in .swiper-slide .banner-content p {
+    transition-delay: 800ms;
+}
+
+.slide-in .swiper-slide .banner-content .btn {
+    transition-delay: 1000ms;
+}
+
+.slide-in .swiper-slide.swiper-slide-active .banner-content h2,
+.slide-in .swiper-slide.swiper-slide-active .banner-content p,
+.slide-in .swiper-slide.swiper-slide-active .banner-content .btn {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+}
+
+.slide-clip .swiper-slide .image-holder img {
+    transform: scale(1.2);
+    transition: transform 1s ease-in-out;
+}
+
+.slide-clip .swiper-slide.swiper-slide-active .image-holder img {
+    transform: scale(1);
+}
+
+.slide-clip .swiper-slide .image-holder {
+    clip-path: inset(100% 0 0 0);
+    display: block;
+}
+
+.slide-clip .swiper-slide.swiper-slide-active .image-holder {
+    animation: 1s slide-clip forwards;
+}
+
+.slide-clip .swiper-slide.swiper-slide-prev .image-holder,
+.slide-clip .swiper-slide.swiper-slide-next .image-holder {
+    animation: 1s slide-down;
+}
+
+@keyframes slide-clip {
+    0% {
+        clip-path: inset(100% 0 0 0);
+    }
+
+    100% {
+        clip-path: inset(0 0 0 0);
+    }
+}
+
+@keyframes slide-down {
+    0% {
+        clip-path: inset(0 0 0 0);
+    }
+
+    100% {
+        clip-path: inset(100% 0 0 0);
+    }
+}
+
+
+.swipe-up {
+    clip-path: inset(0 0 100% 0);
+    display: block;
+}
+
+.aos-animate .swipe-up {
+    animation: 1s swipe-up forwards;
+}
+
+@keyframes swipe-up {
+    0% {
+        clip-path: inset(0 0 100% 0);
+    }
+
+    100% {
+        clip-path: inset(0);
+    }
+}
+
+.icon-arrow {
+    position: absolute;
+    top: 100% !important;
+    font-size: 2em;
+    color: #111;
+    z-index: 8;
+    width: 90px !important;
+    height: 90px !important;
+    border-radius: 50%;
+    border: 1px solid #d9d9d9;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    opacity: 0.4;
+    transition: opacity 0.3s ease-out;
+    color: #111 !important;
+}
+
+.icon-arrow:hover {
+    opacity: 1;
+}
+
+.icon-arrow.swiper-button-prev {
+    left: 30px;
+}
+
+.icon-arrow.swiper-button-next {
+    right: 30px;
+}
+
+@media (max-width: 991px) {
+
+    .icon-arrow.swiper-button-prev,
+    .icon-arrow.swiper-button-next {
+        display: none;
+    }
+
+    .swiper-pagination {
+        position: relative;
+    }
+}
+
+.image-zoom-effect {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.image-zoom-effect .image-holder {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+    transform: scale(1);
+    transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+}
+
+.image-zoom-effect:hover .image-holder {
+    transform: scale(0.95);
+}
+
+.image-zoom-effect img {
+    transform: scale(1);
+    will-change: transform;
+    transition: transform 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+    z-index: 0;
+}
+
+.image-zoom-effect:hover img {
+    transform: scale(1.1);
+}
+
+.polygon {
+    clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 100%, 80% 100%, 20% 100%, 0 100%, 0% 20%);
+}
+
+.aos-animate .polygon {
+    animation: 1s polygon forwards;
+}
+
+@keyframes polygon {
+    0% {
+        clip-path: polygon(0 0, 100% 0, 100% 20%, 100% 100%, 80% 100%, 20% 100%, 0 100%, 0% 20%);
+    }
+
+    100% {
+        clip-path: polygon(20% 0%, 80% 0%, 100% 20%, 100% 80%, 80% 100%, 20% 100%, 0% 80%, 0% 20%);
+    }
+}
+
+/* open-up */
+.open-up {
+    clip-path: inset(48% 34% 36% 35%);
+}
+
+.aos-animate.open-up {
+    animation: 1s open-up forwards;
+}
+
+@keyframes open-up {
+    0% {
+        clip-path: inset(48% 34% 36% 35%);
+    }
+
+    100% {
+        clip-path: inset(0% 0% 0% 0%);
+    }
+}
+
+/*@keyframes down-leave {
+    0% { clip-path: inset(0); }
+    100% { clip-path: inset(100% 0 0 0); }
+  }*/
+.swipe-up {
+    --delay: 0.05s;
+}
+
+.swipe-up {
+    animation-delay: 1s;
+    /* animation-delay: data(swipe-delay); */
+}
+
+.testimonials .section-title {
+    font-size: 1em;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.testimonial-swiper .testimonial-item blockquote {
+    font-size: 2.5em;
+}
+
+.testimonial-swiper .testimonial-item blockquote>p {
+    margin: 0;
+}
+
+.testimonials .review-title {
+    font-size: 14px;
+}
+
+.testimonial-swiper .swiper-slide {
+    opacity: 0.2;
+    width: 42% !important;
+}
+
+.testimonial-swiper.swiper-3d .swiper-slide-shadow-left,
+.testimonial-swiper.swiper-3d .swiper-slide-shadow-right {
+    background-image: none;
+}
+
+.testimonial-swiper .swiper-slide-active {
+    opacity: 1;
+}
+
+.testimonials .swiper-pagination {
+    left: 0;
+    right: 0;
+}
+
+.testimonials .swiper-pagination .swiper-pagination-bullet-active {
+    background: #8C907E;
+}
+
+.swiper-pagination-bullet {
+    width: 12px;
+    height: 12px;
+    margin-right: 10px;
+}
+
+@media only screen and (max-width: 1199px) {
+    .testimonial-swiper .testimonial-item blockquote {
+        font-size: 1.8em;
+    }
+}
+
+@media only screen and (max-width: 999px) {
+    .testimonial-swiper .testimonial-item blockquote {
+        font-size: 1.2em;
+    }
+}
+
+.border-animation-left .item-anchor {
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.border-animation-left .item-anchor:after {
+    content: "";
+    position: absolute;
+    width: 0;
+    height: 1px;
+    left: 0;
+    bottom: 0;
+    z-index: 9;
+    background: var(--bs-dark);
+    transition: all 0.5s ease;
+}
+
+.border-animation-left.light-border .item-anchor:after,
+.border-animation-left .item-anchor:after {
+    background: var(--bs-dark);
+}
+
+.border-animation-left .item-anchor:hover:after,
+.border-animation-left .item-anchor:focus:after {
+    width: 100%;
+}
+
+.product-image {
+    width: 450px;
+    height: 450px;
+    object-fit: cover;
+}
+
+.instagram .insta-item {
+    position: relative;
+    margin-bottom: 20px;
   }
-  a:hover {
-    color: #747bff;
+  
+  .instagram .insta-item a:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    transition: 0.6s ease-out;
   }
-  button {
-    background-color: #f9f9f9;
-  }
+
+.insta-image {
+    width: 256px;
+    height: 256px;
+    object-fit: cover;
 }
